<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyStatfit</string>
    <string name="app_version">0.1.0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="result">Result</string>
    <string name="wrong_login_or_pass">Wrong login or password</string>
    <string name="registration">Registration</string>
    <string name="password_confirm">Confirm password</string>
    <string name="email">Email</string>
    <string name="error_dog">\@ not found</string>
    <string name="error_length">To short email</string>
    <string name="error_email">Wrong email</string>
    <string name="error_password_length">Too short password</string>
    <string name="error_password_mismatch">The passwords are not idential</string>
    <string name="error_whitespace">There is a whitespace</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Sure want to exit?</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="preferences">Preferences</string>
    <string name="information">Information</string>
    <string name="developer">Developer</string>
    <string name="maxim_lazarenko">Maxim Lazarenko</string>
    <string name="support">Support</string>
    <string name="lazexe_email_address">lazexek21@gmail.com</string>
    <string name="version">Version</string>
    <string name="account">Account</string>
    <string name="logout_description">Logout from account</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="surname_required">Surname (required)</string>
    <string name="name_required">Name (required)</string>
    <string name="parent_name_required">Parent name (required)</string>
    <string name="birthday_required">Birthday (required)</string>
    <string name="accept">Accept</string>
    <string name="newlogin_required">New login (required)</string>
    <string name="edit">Edit</string>
    <string name="edit_description">Edit user information</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="time">Time</string>
    <string name="TODO">TODO</string>
    <string name="user">User</string>
    <string name="weight">Weight</string>
    <string name="weight_description">Set your weight</string>
    <string name="height">Height</string>
    <string name="height_description">Set your height</string>
    <string name="speed">Speed</string>
    <string name="step_length">Step length</string>
    <string name="step_length_description">Set your step length</string>
    <string name="success">Success!</string>
	<string name="trainings">Trainings</string>
	<string name="running">Running</string>
	<string name="cycle_racing">Cycle racing</string>
	<string name="mountain_biking">Mountain biking</string>
	<string name="walking">Walking</string>
	<string name="hiking">Hiking</string>
	<string name="downhill">Downhill</string>
	<string name="cross_country_skiing">cross-country skiing</string>
	<string name="snowboarding">Snowboarding</string>
	<string name="skating">Skating</string>
	<string name="swimming">Swimming</string>
	<string name="riding_in_a_wheelchair">Riding in a wheelchair</string>
	<string name="rowing">Rowing</string>
	<string name="nordic_walking">Nordic walking</string>
	<string name="other">Other</string>
	<string name="settings">Settings</string>
	<string name="quit">Quit</string>
    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="weather_type">
        <item>Sunny</item>
        <item>Raining</item>
    </string-array>
    <string-array name="cover_type">
        <item>Clean road</item>
        <item>Snow</item>
        <item>Sand</item>
    </string-array>
    <string name="sentiment">Sentiment</string>
    <string name="pulse">Pulse</string>
    <string name="weather">Weather</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_cancel_save_training"> The result is not saved! Sure to cancel?</string>
    <string name="error_empty_field">Empty field!</string>
    <string name="sure_close_training">Sure close training?</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="start_training">Start training</string>
</resources>
