<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    
    <PreferenceCategory
        android:title="@string/account">
        
        <Preference 
            android:key="@string/logout"
            android:title="@string/logout"
            android:summary="@string/logout_description"/>
        
        <Preference 
            android:key="@string/edit"
            android:title="@string/edit"
            android:summary="@string/edit_description"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/user">
        
        <EditTextPreference 
            android:key="@string/weight"
            android:title="@string/weight"
            android:defaultValue="75"
            android:summary="@string/weight_description"/>
        
        <EditTextPreference 
            android:key="@string/height"
            android:title="@string/height"
            android:defaultValue="175"
            android:summary="@string/height_description"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/information">
        
        
        <Preference 
            android:title="@string/developer"
            android:summary="@string/maxim_lazarenko"/>
        
        <Preference 
            android:title="@string/support"
            android:summary="@string/lazexe_email_address"/>
        
        <Preference 
            android:title="@string/version"
            android:summary="@string/app_version"/>
        
    </PreferenceCategory>
        

</PreferenceScreen>
