<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/edit_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/surname_required"/>
    
    <EditText 
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textPersonName"
        android:hint="@string/name_required"/>
    
    <EditText 
        android:id="@+id/edit_parent_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/parent_name_required"/>
    
    <EditText
        android:id="@+id/edit_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthday_required" />
    
    <Spinner
        android:id="@+id/edit_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/gender_type" />
    
    <Button 
        android:id="@+id/accept_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/accept"/>

</LinearLayout>
